update till sunday

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -71,12 +71,12 @@
         android:id="@+id/home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="#123456"
+        android:background="#797371"
         android:clickable="true"
         android:onClick="homed"
         android:src="@drawable/home"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
+        app:layout_constraintEnd_toStartOf="@+id/settings_a"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
         app:layout_constraintVertical_bias="1.0"
@@ -87,12 +87,12 @@
         android:id="@+id/settings_a"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="#E66B6B"
+        android:background="#797371"
         android:clickable="true"
         android:onClick="setting"
         android:src="@drawable/settings"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
+        app:layout_constraintEnd_toStartOf="@+id/profile_a"
         app:layout_constraintStart_toEndOf="@+id/home"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
         app:layout_constraintVertical_bias="1.0"
@@ -102,14 +102,14 @@
         android:id="@+id/profile_a"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:background="#343456"
+        android:background="#797371"
         android:src="@drawable/profile"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toEndOf="@+id/settings_a"
+        app:layout_constraintTop_toBottomOf="@+id/alarm_update"
+        app:layout_constraintVertical_bias="1.0"
         app:layout_constraintWidth_percent="0.33" />
 
     <android.support.constraint.Guideline
