--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorAccent">
+    android:color="#797371">
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
@@ -11,15 +11,15 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
-           <stroke android:width="1dip" android:color="#0B0E0D" />
-            <solid android:color="#090E0D"/>
+           <stroke android:width="1dip" android:color="#95F49C9C" />
+            <solid android:color="#95F49C9C"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="19dip" />
-           <stroke android:width="1dip" android:color="#070A0A" />
-          <gradient android:angle="-90" android:startColor="#673AB7" android:endColor="#9C27B0" />
+            <corners android:radius="10dip" />
+           <stroke android:width="1dip" android:color="#797371" />
+          <gradient android:angle="-90" android:startColor="#FF9E80" android:endColor="#FF9E80" />
         </shape>
     </item>
 </ripple>
