--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/tvsettings"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:text="This is my Settings"
-        android:textSize="22dp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="Settings"
+        android:textSize="60dp"
+        android:textColor="#000000"/>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="#000000"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvhelp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/help_support"
+        android:padding="15dp"
+        android:textSize="40sp"/>
+
+    <TextView
+        android:id="@+id/tvfeedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="Feedback"
+        android:textSize="40dp" />
+
+    <TextView
+        android:id="@+id/etlogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="Logout"
+        android:textSize="40dp" />
 
 </LinearLayout>
