--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="150dp"
         android:layout_marginTop="8dp"
         android:text="Update"
+        android:background="@drawable/rounded_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,6 +32,9 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="48dp"
         android:ems="10"
+        android:gravity="center"
+        android:backgroundTint="@color/green"
+        android:textCursorDrawable="@color/green"
         android:hint="New Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
