--- a/app/src/main/res/layout/activity_classification_.xml
+++ b/app/src/main/res/layout/activity_classification_.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
-    android:background="#95f49c9c"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
         android:id="@+id/Rec"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="42dp"
         android:layout_marginTop="166dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_login"
         android:clickable="true"
         android:text="Start Recording"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,10 +24,11 @@
 
     <Button
         android:id="@+id/stoprec"
-        android:layout_width="wrap_content"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_login"
         android:text="Stop Recording"
         app:layout_constraintBottom_toTopOf="@+id/text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,14 +38,27 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
         android:text="Class Text"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.628" />
+
+    <Spinner
+        android:id="@+id/Spinn"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:text="Class Text"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.128" />
 
 
     <ImageButton
@@ -52,27 +67,25 @@
         android:layout_height="wrap_content"
         android:background="#797371"
         android:clickable="true"
-        android:onClick="homed"
         android:src="@drawable/home"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/settings"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.33"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/settings"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/settings"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintWidth_percent="0.33" />
 
     <ImageButton
         android:id="@+id/settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="422dp"
         android:background="#797371"
         android:clickable="true"
-        android:onClick="setting"
         android:src="@drawable/settings"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/profile"
         app:layout_constraintStart_toEndOf="@+id/home"
         app:layout_constraintTop_toBottomOf="@+id/text"
         app:layout_constraintVertical_bias="1.0"
