--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -15,6 +15,8 @@
         android:layout_marginTop="44dp"
         android:ems="10"
         android:hint="Email"
+        android:backgroundTint="@color/green"
+        android:textCursorDrawable="@color/green"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +24,13 @@
 
     <Button
         android:id="@+id/btnPasswordReset"
-        android:layout_width="wrap_content"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="527dp"
-        android:layout_marginEnd="162dp"
         android:layout_marginStart="161dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="527dp"
+        android:background="@drawable/rounded_login"
         android:text="Reset Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
