--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#95f49c9c"
+    android:background="#ffffff"
     android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
@@ -14,112 +14,119 @@
 
         <TextView
             android:id="@+id/tvProfileName"
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
             android:layout_marginTop="88dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvProfileEmail"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvProfileAge"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
+            app:layout_constraintHorizontal_bias="0.545"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+
+        <TextView
+            android:id="@+id/tvProfileEmail"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvProfileAge" />
 
         <TextView
             android:id="@+id/tvProfileDeaf"
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail" />
 
         <TextView
             android:id="@+id/tvProfilefname"
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:layout_marginTop="27dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvProfileDeaf" />
 
         <TextView
             android:id="@+id/tvProfilerelation"
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvProfilefname" />
 
         <TextView
             android:id="@+id/tvProfilenumber"
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="150dp"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvProfilefname" />
-
-        <TextView
-            android:id="@+id/tvProfileAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:layout_marginEnd="150dp"
-            android:layout_marginStart="150dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textSize="28dp"
+            android:fontFamily="serif"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvProfilerelation" />
 
         <Button
             android:id="@+id/btnProfileUpdate"
-            android:layout_width="wrap_content"
+            android:layout_width="112dp"
             android:layout_height="44dp"
-            android:layout_marginEnd="150dp"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_login"
             android:text="Edit Profile"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.538"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvProfilenumber" />
 
@@ -127,11 +134,12 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="250dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="250dp"
+            android:layout_marginBottom="8dp"
             android:text="Profile"
+            android:textColor="#A5EBE4"
             android:textSize="50dp"
             app:layout_constraintBottom_toTopOf="@+id/tvProfileName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -155,16 +163,16 @@
 
         <Button
             android:id="@+id/tvChangePassword"
-            android:layout_width="wrap_content"
+            android:layout_width="184dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="150dp"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/rounded_login"
             android:text="Change Password"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.538"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnProfileUpdate"
             app:layout_constraintVertical_bias="0.0" />
