--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,6 +20,9 @@
             android:layout_marginEnd="99dp"
             android:ems="10"
             android:hint="Name"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
@@ -36,6 +39,9 @@
             android:layout_marginEnd="99dp"
             android:ems="10"
             android:hint="email id"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +55,9 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="99dp"
             android:ems="10"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:hint="Password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,14 +66,15 @@
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="wrap_content"
+            android:layout_width="111dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="160dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="163dp"
+            android:background="@drawable/rounded_login"
             android:text="Register"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintHorizontal_bias="0.434"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etMobile" />
 
@@ -90,6 +100,9 @@
             android:layout_marginEnd="99dp"
             android:ems="10"
             android:hint="Age"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:inputType="numberSigned|numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -104,6 +117,9 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="21dp"
             android:ems="10"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:hint="Normal User or Partial deaf or Complete deaf"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +136,9 @@
             android:ems="10"
             android:hint="Family member name"
             android:inputType="textPersonName"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etdeaf" />
@@ -133,6 +152,9 @@
             android:layout_marginEnd="99dp"
             android:ems="10"
             android:hint="Relation"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -146,6 +168,9 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="56dp"
             android:ems="10"
+            android:gravity="center"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:hint="Mobile number of family member"
             android:inputType="phone"
             app:layout_constraintEnd_toEndOf="parent"
