--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#E91E63</color>
     <color name="textColorPrimary">#05161E</color>
+    <color name="green">#A5EBE4</color>
 </resources>
