--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,25 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#797371">
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="15dp"/>
+    <solid android:color="@color/green"/>
 
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
-           <stroke android:width="1dip" android:color="#95F49C9C" />
-            <solid android:color="#95F49C9C"/>
-        </shape>
-    </item>
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="10dip" />
-           <stroke android:width="1dip" android:color="#797371" />
-          <gradient android:angle="-90" android:startColor="#FF9E80" android:endColor="#FF9E80" />
-        </shape>
-    </item>
-</ripple>
+</shape>
