--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#95f49c9c"
+        android:background="#ffffff"
         tools:context=".login">
 
         <EditText
@@ -21,7 +21,11 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
+            android:fontFamily="sans-serif"
+            android:textCursorDrawable="@color/green"
             android:hint="Email"
+            android:backgroundTint="@color/green"
+            android:gravity="center"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
@@ -39,7 +43,11 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
             android:hint="Password"
+            android:backgroundTint="@color/green"
+            android:textCursorDrawable="@color/green"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
@@ -50,12 +58,14 @@
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/rounded_login"
             android:text="Login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -69,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:text="No of attempts remaining:  "
@@ -76,7 +87,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-            app:layout_constraintVertical_bias="0.355" />
+            app:layout_constraintVertical_bias="0.355"
+            />
 
         <TextView
             android:id="@+id/tvRegister"
@@ -85,6 +97,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="76dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="sans-serif"
             android:layout_marginBottom="8dp"
             android:text="Don't have an account? SignUp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -102,6 +115,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Forgot Password?"
+            android:fontFamily="sans-serif"
             app:layout_constraintBottom_toTopOf="@+id/tvInfo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
