--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#95f49c9c"
+    android:background="#ffffff"
     tools:context=".MainActivity">
 
     <!--  <Switch
@@ -105,6 +105,7 @@
         android:drawableTop="@drawable/video"
         android:fontFamily="monospace"
         android:text="Video"
+        android:onClick="video"
         android:textColor="#000000"
         android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -115,19 +116,19 @@
 
     <Button
         android:id="@+id/sound"
-        android:layout_width="80dp"
+        android:layout_width="81dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/rounded_corner"
-        android:fontFamily="monospace"
-        android:drawableTop="@drawable/sound"
-        android:text="Sound"
-        android:textSize="12dp"
-        android:textColor="#000000"
         android:clickable="true"
+        android:drawableTop="@drawable/sound"
+        android:fontFamily="monospace"
         android:onClick="rec"
+        android:text="Sound"
+        android:textColor="#000000"
+        android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/video"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
