--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
     <TextView
@@ -11,8 +12,8 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Settings"
-        android:textSize="60dp"
-        android:textColor="#000000"/>
+        android:textSize="50dp"
+        android:textColor="@color/green"/>
 
     <View
         android:id="@+id/divider"
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="@string/help_support"
         android:padding="15dp"
-        android:textSize="40sp"/>
+        android:textSize="30dp"/>
 
     <TextView
         android:id="@+id/tvfeedback"
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Feedback"
-        android:textSize="40dp" />
+        android:textSize="30dp" />
 
     <TextView
         android:id="@+id/etlogout"
@@ -43,6 +44,6 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Logout"
-        android:textSize="40dp" />
+        android:textSize="30dp" />
 
 </LinearLayout>
