--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -15,9 +15,9 @@
             android:id="@+id/etNameUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="98dp"
             android:layout_marginStart="98dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="98dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
@@ -28,12 +28,13 @@
 
         <Button
             android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
+            android:layout_width="147dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="120dp"
-            android:layout_marginEnd="162dp"
             android:layout_marginStart="162dp"
             android:layout_marginTop="80dp"
+            android:layout_marginEnd="162dp"
+            android:layout_marginBottom="120dp"
+            android:background="@drawable/rounded_login"
             android:text="Update Profile"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,12 +76,11 @@
             android:id="@+id/etfNameUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="98dp"
             android:layout_marginStart="98dp"
             android:layout_marginTop="28dp"
+            android:layout_marginEnd="98dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.446"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,12 +90,11 @@
             android:id="@+id/etfRelationUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="98dp"
             android:layout_marginStart="98dp"
             android:layout_marginTop="28dp"
+            android:layout_marginEnd="98dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.446"
             app:layout_constraintStart_toStartOf="parent"
@@ -146,6 +145,97 @@
             android:orientation="vertical"
             app:layout_constraintGuide_begin="20dp"
             app:layout_constraintGuide_percent="1.0" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="73dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:text="Name"
+            app:layout_constraintEnd_toStartOf="@+id/etNameUpdate"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="73dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:text="Age"
+            app:layout_constraintEnd_toStartOf="@+id/etAgeUpdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="73dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:text="Type"
+            app:layout_constraintEnd_toStartOf="@+id/etDeafUpdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="73dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:text="Family Member"
+            app:layout_constraintEnd_toStartOf="@+id/etfNameUpdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="73dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:text="Relation"
+            app:layout_constraintEnd_toStartOf="@+id/etfRelationUpdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="73dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="serif"
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:text="Mo. No."
+            app:layout_constraintEnd_toStartOf="@+id/etnumberUpdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     </android.support.constraint.ConstraintLayout>
 
